Login and Register page

--- a/client/index.html
+++ b/client/index.html
@@ -11,8 +11,14 @@
             integrity="sha384-T3c6CoIi6uLrA9TneNEoa7RxnatzjcDSCmG1MXxSR1GAsXEV/Dwwykc2MPK8M2HN"
             crossorigin="anonymous"
         />
+        <script
+            type="text/javascript"
+            src="http://www.bing.com/api/maps/mapcontrol?callback=GetMap"
+            async
+            defer
+        ></script>
     </head>
-    <body class="d-flex text-center text-white bg-dark">
+    <body>
         <div id="root"></div>
         <script type="module" src="/src/main.jsx"></script>
         <script
