--- a/client/index.html
+++ b/client/index.html
@@ -11,6 +11,9 @@
             integrity="sha384-T3c6CoIi6uLrA9TneNEoa7RxnatzjcDSCmG1MXxSR1GAsXEV/Dwwykc2MPK8M2HN"
             crossorigin="anonymous"
         />
+        <script src="http://www.bing.com/api/maps/mapcontrol"></script>
+        <script src="/js/clusterMap.js"></script>
+        <script src="/js/singleMap.js"></script>
     </head>
     <body class="d-flex flex-column vh-100">
         <div id="root"></div>
